# RydEngine

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Editor/src/Helpers/: DpiScaling.hpp  EditorCameraControls.hpp
Editor/src/Views/: ImageViewerWindow.hpp  SceneViewWindow.hpp
Editor/src/Views/Components/: EntityList.hpp  Inspector.hpp
Engine/Entities/: Scene.hpp
Engine/Entities/Components/: ModelComponent.hpp  PlayerComponent.hpp  TransformComponent.hpp
Game/: CMakeLists.txt
Game/src/: Game.hpp  main.cpp
Game/src/Systems/: PlayerSystem.hpp
src/RydEngine/: main.cpp
src/RydEngine/Core/: EngineState.hpp  Entity.hpp  ImGuiManager.hpp  ImGuiTheme.hpp  MenuManager.hpp  Settings.hpp  UIManager.hpp
src/RydEngine/Editor/: EditorState.hpp
src/RydEngine/Entities/: BSP.hpp  Cube.hpp  GameObject.hpp  RCamera.hpp  Scene.hpp  Sphere.hpp  StaticBody.hpp
src/RydEngine/Entities/Components/: CameraComponent.hpp  Component.hpp  PlayerComponent.hpp  TransformComponent.hpp
src/RydEngine/Entities/GameObjects/: CameraObject.hpp  GameObject.hpp  PlayerObject.hpp
src/RydEngine/Entities/Primitives/: Cube.hpp  Sphere.hpp
src/RydEngine/Helpers/: DpiScaling.hpp
src/RydEngine/Systems/: PlayerSystem.hpp  RenderSystem.hpp
src/RydEngine/Views/: BspViewerWindow.hpp  DocumentWindow.hpp  ImageViewerWindow.hpp  SceneViewWindow.hpp  SceneWindow.hpp
